crates/alba-tui/tests/snapshots/render__the_graph_view_draws_layers_and_edges.snap
---
source: crates/alba-tui/tests/render.rs
expression: "drawn(&state, 80, 24)"
---
"┌─ alba · run test ── ▰▰▰▰▰▱▱▱▱▱▱▱▱▱ 1/3 · 0.0s ───────────────────────────────┐"
"│                                  [✔ codegen]                                 │"
"│                                       │                                      │"
"│                                   [▶ build]                                  │"
"│                                       │                                      │"
"│                                   [○ test]                                   │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│ ✔ 1  ⚡ 0  ✖ 0  ○ 1                ▰▰▰▰▰▰▰▰▰▰▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱▱ 1/3 · 0.0s │" Hidden by multi-width symbols: [(8, " ")]
"└─ ↑↓←→ move · Enter select · Esc back ────────────────────────────────────────┘"
