crates/alba-tui/tests/snapshots/render__the_graph_view_focus_follows_navigation.snap
---
source: crates/alba-tui/tests/render.rs
expression: "drawn(&state, 80, 24)"
---
"┌─ alba · run test ── ▰▰▰▰▰▱▱▱▱▱▱▱▱▱ 1/3 · 0.0s ───────────────────────────────┐"
"│                                  [✔ codegen]                                 │"
"│                                       │                                      │"
"│                                   [▶ build]                                  │"
"│                                       │                                      │"
"│                                   [○ test]                                   │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└─ ↑↓←→ move · Enter select · Esc back ────────────────────────────────────────┘"
